--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "mongodb": "^2.2.16"
   },
