--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "start capstone structure",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/mocha -u exports test/**/*",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -17,6 +17,8 @@
     "mongodb": "^2.2.16"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "supertest": "^2.0.1"
   }
 }
