--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha -u exports test/**/*",
-    "dev": "nodemon server.js"
+    "dev": "nodemon bin/www"
   },
   "author": "",
   "license": "ISC",
