--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha -u exports test/**/*",
-    "dev": "nodemon bin/www"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "mongodb": "^2.2.16"
+    "mongodb": "^2.2.16",
+    "mongoose": "^4.7.6"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
